[project]
name = "callable-tm"
version = "0.1.0"
description = ""
authors = [
    {name = "Johnathan Barbosa",email = "jbarbosa0504@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transaction (>=5.0,<6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
