[project]
name = "callable-tm"
version = "0.2.0"
description = "package that allows to implement functions that can join on current transaction"
authors = [
    {name = "Johnathan Barbosa",email = "jbarbosa0504@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transaction (>=5.0,<6.0)"
]
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Zope",
    "Natural Language :: English"
]

[tool.poetry.urls]
"Docs" = "https://callable-tm.readthedocs.io/en/latest/"
"Code" = "https://github.com/JohnathanBarb/callable_tm"
"Issues" = "https://github.com/JohnathanBarb/callable_tm/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
isort = "^6.0.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"

[tool.pytest.ini_options]
pythonpath = "."

[tool.isort]
profile = "black"
